--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.2.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -22,7 +23,11 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "primeng": "^4.1.0-rc.2",
+    "quill": "^1.2.6",
     "rxjs": "^5.1.0",
+    "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
