--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "bootstrap": "^3.3.7",
+    "clarity-angular": "^0.10.0-alpha.5",
+    "clarity-icons": "^0.10.0-alpha.5",
+    "clarity-ui": "^0.10.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "mutationobserver-shim": "^0.3.2",
     "primeng": "^4.1.0-rc.2",
     "quill": "^1.2.6",
     "rxjs": "^5.1.0",
