--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@webcomponents/custom-elements": "^1.0.0",
+    "aws-sdk": "^2.97.0",
     "bootstrap": "^3.3.7",
     "clarity-angular": "^0.10.0-alpha.5",
     "clarity-icons": "^0.10.0-alpha.5",
